monitoring/grafana/ingress-kube.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-kube
  namespace: infra
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - grafana.kube.stelmashchuk.dev
      secretName: grafana-kube-tls
  rules:
    - host: grafana.kube.stelmashchuk.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
